EngineController: removed excessive playcount increase.

EngineController has been calling playbackFinished twice: in
slotQueueEnded and slotAboutToFinish, so last track in the playback
queue was getting playcount increased twice.

BUG: 188330